v24.10/en/_sources/rest_api_userspace.rst.txt
UserSpace

UserSpace information including running apps and their published ports
can be queried via the userspace endpoint. An app can be of "type"
"container" or "compose" (compose stack with potentially multiple
containers).

GET /userspace

   Get UserSpace information.

   Template request

      GET /api/v2/userspace HTTP/1.1

   Sample response

      HTTP/1.1 200 OK
      Content-Type: application/json

      {
        "apps": [
          {
            "containers": [
              {
                "host_ports": [
                  {
                    "port": 8888,
                    "protocol": "http"
                  }
                ],
                "name": "hello_rc_visard_ng",
                "status": "running"
              }
            ],
            "name": "hello_rc_visard_ng",
            "type": "container"
          },
          {
            "containers": [
              {
                "host_ports": [
                  {
                    "port": 8080,
                    "protocol": "http"
                  }
                ],
                "name": "grafana",
                "status": "running"
              },
              {
                "host_ports": [
                  {
                    "port": 9090,
                    "protocol": "http"
                  }
                ],
                "name": "prometheus",
                "status": "running"
              }
            ],
            "name": "rc_visard_monitoring",
            "type": "compose"
          }
        ],
        "available": true,
        "enabled": true
      }

   Response Headers:
      Content-Type -- application/json application/ubjson

   Status Codes:
      200 OK -- successful operation (returns UserSpace)

   Referenced Data Models:
      UserSpace\:(Section \ref{rest_api_datamodel:sect-rest-datamodel-
      userspace})

PUT /userspace/configure

   Configure UserSpace (enable, disable or reset).

   Template request

      PUT /api/v2/userspace/configure?action=<action> HTTP/1.1
      Accept: application/json application/ubjson

   Query Parameters:
      action (string) -- Action to take (one of enable, disable,
      reset) (required)

   Request Headers:
      Accept -- application/json application/ubjson

   Response Headers:
      Content-Type -- application/json application/ubjson

   Status Codes:
      200 OK -- successful operation

GET /userspace/proxy

   Get HTTP proxy settings for pulling container images and git repos.

   Template request

      GET /api/v2/userspace/proxy HTTP/1.1

   Sample response

      HTTP/1.1 200 OK
      Content-Type: application/json

      {
        "http_proxy": "http://10.0.1.45:8080",
        "https_proxy": "http://10.0.1.45:8080"
      }

   Response Headers:
      Content-Type -- application/json application/ubjson

   Status Codes:
      200 OK -- successful operation (returns ProxySettings)

   Referenced Data Models:
      ProxySettings\:(Section \ref{rest_api_datamodel:sect-rest-
      datamodel-proxysettings})

PUT /userspace/proxy

   Set HTTP proxy settings for pulling container images and git repos.

   Template request

      PUT /api/v2/userspace/proxy HTTP/1.1
      Accept: application/json application/ubjson

      {}

   Sample response

      HTTP/1.1 200 OK
      Content-Type: application/json

      {
        "http_proxy": "http://10.0.1.45:8080",
        "https_proxy": "http://10.0.1.45:8080"
      }

   Request JSON Object:
      http_proxy (ProxySettings) -- (optional)

   Request Headers:
      Accept -- application/json application/ubjson

   Response Headers:
      Content-Type -- application/json application/ubjson

   Status Codes:
      200 OK -- successful operation (returns ProxySettings)

      400 Bad Request -- invalid/missing arguments

   Referenced Data Models:
      ProxySettings\:(Section \ref{rest_api_datamodel:sect-rest-
      datamodel-proxysettings})
